--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Pixel Art Maker!</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>Lab: Pixel Art Maker</h1>
@@ -21,8 +22,8 @@
     <input type="color" id="colorPicker">
 
     <h2>Design Canvas</h2>
-    <table id="pixel_canvas"></table>
-
+    <table id="pixel_canvas">
+    </table>
     <script src="designs.js"></script>
 </body>
 </html>
